--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,13 @@
     <nav class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">About </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">contact</a>
+          <a class="nav-link" href="contact.html">contact<span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </nav>
