--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="about.html">About
+          <a class="nav-link" href="index.html">About
             <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
