--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <section class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About </span></a>
+          <a class="nav-link" href="index.html">About </span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</a>
