--- a/index.html
+++ b/index.html
@@ -46,25 +46,18 @@
           <section class="card">
             <section class="card-body">
               <h5 class="card-title">About Me</h5>
-              <section class="card-text"> <em>I was born in Puerto Rico, But actually living in Philadelphia,PA since
+              <section class="card-text"> <em>I was born in Puerto Rico, But living in Philadelphia, PA since
                   2015.
-                  When I first went to "college" well! it was not really college,
-                  It was was some kind of institute that prepares you for the COMPTIA A+ exams, the computer tech
-                  certification. I went trough a lot in that time, I became a father so i had to quit college and
-                  keep
-                  working.
-                  Then i started working in regular jobs my whole life until I started getting interested in code.
+                  When I first went to  college in 2011,
+                  It was an institute call ICPR Junior College that prepares you for the CompTIA A+ exams, the computer technician certification. That's where my passion started to grow. Once I saw that, I have the skill of learning thins quickly. I decided to take one step further. But I went through a lot at that time. I became a father, so I had to quit college and keep working.
+                  Then I started working in regular jobs until I started learning how to weld. After learning good welding skills, I manage to get a job as a welder at Eastern Catalytic.   But the IT field has always been my passion. Having a background as a computer hardware and repair technician,  I started to get interested in coding.
                   Then
                   I
-                  said to my self you need to get to the other level. And i started taking online courses teaching
-                  my
-                  self.
-                  When I first started learning how to code and I built my first HTML file I was hooked. The
+                  said to my self you need to get to the other level. And I started taking online courses and teaching my self how to code.
+                  When I first started learning how to code and built my first HTML file, I was hooked. The
                   internet
                   was
-                  my outlet, And I found a new way to learn , so i decided to join a coding "bootcamp" Now I'm
-                  really
-                  learning how to code properly and a new way to show the world my passions.</em> </section>
+                  my outlet And I found a new way to learn, so I decided to join a coding "Bootcamp" Now I'm learning how to code correctly and new ways to show my passions.  I consider my self a team player, And I have lots of experience working with different teams in different roles.</em> </section>
               <section class="card-text"><small class="text-muted">Last updated 3 mins ago</small></section>
             </section>
           </section>
