added a resume download button

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+
     <title>Geovany's Personal Site</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
@@ -275,43 +274,12 @@
                             <div class="text-center">
                                 <h2 class="section-heading text-uppercase"><em>Resume</em> </h2>
                                 <hr>
+                                <div class="text-center">
+                                    <div id="success"></div>
+                                    <a id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase"
+                                        href="./assets/resume/Resume.pdf" title="Resume" download>Download</a>
+                                </div>
                             </div>
-                            <div class="text-lg-left">
-                                <h2 class="section-heading text-uppercase">Experience</h2>
-                                <hr>
-                            </div>
-                            <div>
-                                <h3 class="section-subheading text-uppercase"><strong>CVS Health 2017-2018 <br>Warehouse
-                                        team
-                                        leader 2017-2018</strong></h3>
-                                <hr>
-                                <h3 class="section-subheading text-uppercase"><strong> EASTERN Catalytic<br>Welder
-                                        Mig Welder 2018-2020</strong></h3>
-                            </div>
-                            <div class="text-center">
-                                <h2 class="section-heading text-uppercase">Education</h2>
-                                <hr>
-                                <h3 class="section-subheading text-uppercase"><strong> ICPR Junior College<br>Computer
-                                        technician Certificate <br>2010-2011<br>Mayaguez PR </strong></h3>
-                                <hr>
-                                <h3 class="section-subheading text-uppercase"><strong>University Of Pennsylvania<br>Full
-                                        Stack Web Developer <br>2020-current<br>Philadelphia PA</strong></h3>
-                            </div>
-                            <div class="text-lg-left">
-                                <h2 class="section-heading text-uppercase">Skills</h2>
-                                <hr>
-                                <ul>
-                                    <li>Computer Repair and maintenance</li>
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JAVASCRIPT</li>
-                                    <li>JQUERY</li>
-                                    <li>ChartJs</li>
-                                    <li>Bilingual Spanish as my first language</li>
-
-                                </ul>
-                            </div>
-
                         </div>
                     </section>
             </section>
