--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">I'm A</h2>
-                <h2 class="section-heading text-uppercase">Front-end Web Developer</h2>
+                <h2 class="section-heading text-uppercase">FullStack Web Developer</h2>
 
             </div>
 
@@ -84,10 +84,10 @@
                                     <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/portfolio/CodingQuiz.png" alt="" />
+                                    <img class="img-fluid" src="assets/img/portfolio/PetFinder!.gif" alt="" />
                                 </a>
                                 <div class="portfolio-caption">
-                                    <div class="portfolio-caption-heading">Coding Quiz</div>
+                                    <div class="portfolio-caption-heading">My Petfinder App</div>
                                     <div class="portfolio-caption-subheading text-muted">Web Development</div>
                                 </div>
                             </div>
@@ -143,7 +143,7 @@
                                     <img class="img-fluid" src="assets/img/portfolio/covidGFS.png" alt="" />
                                 </a>
                                 <div class="portfolio-caption">
-                                    <div class="portfolio-caption-heading">CovidTravellarGFS</div>
+                                    <div class="portfolio-caption-heading">CovidTravellerGFS</div>
                                     <div class="portfolio-caption-subheading text-muted">Web Development</div>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                                     I
                                     have
                                     the skill
-                                    of learning thins quickly. I decided to take one step further. But I went through a
+                                    of learning things quickly. I decided to take one step further. But I went through a
                                     lot
                                     at
                                     that time.
@@ -253,12 +253,14 @@
                             <div class="col-lg-6">
                                 <ul>
                                     <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 33</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong>Front-End
+                                    <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong>FullStack
                                         Developer
                                     </li>
-
-                                    <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City :
-                                        Philadelphia, PA,
+                                    <li><i class="icofont-rounded-right"></i> <strong>College:</strong>University Of
+                                        Pennsylvania
+                                    </li>
+                                    <li><i class="icofont-rounded-right"></i> <strong>City:</strong>
+                                        Philadelphia, PA
                                     </li>
 
                                 </ul>
@@ -406,23 +408,36 @@
                                 <div class="col-lg-8">
                                     <div class="modal-body">
                                         <!-- Project Details Go Here-->
-                                        <h2 class="text-uppercase">Coding Quiz</h2>
+                                        <h2 class="text-uppercase">MY Pet Finder App</h2>
                                         <p class="item-intro text-muted">About</p>
-                                        <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/CodingQuiz.png"
+                                        <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/PetFinder!.gif"
                                             alt="" />
-                                        <p>This app was made as a homework for Penn LPS bootcamp. This is a quiz
-                                            application using HTML, CSS, and Javascript. This application use Javascript
-                                            to provide quiz questions and collect user data to determine if the answers
-                                            to the question were correct, this then generates a score and appends a
-                                            final page of results. This project has been deployed to GitHub Pages.</p>
+                                        <p>This program is fully deployable from a Heroku link
+                                            The user will be asked to create a user ID and password at the
+                                            start so that their information will be saved in the database.
+                                            The user experience will be that they will deploy from an Heroku link, and
+                                            create a user ID and password at the start. They will use that user ID and
+                                            password to login to the site, and will be taken to a search page. The user
+                                            can enter a zip code and choose criteria related to their pet search and
+                                            click submit. The app will return cards with adoptable pets and their
+                                            information.
+                                            The user can then click on a provided link to go get more information about
+                                            a pet, or they can click on a button to save a pet to their favorites
+                                            library. The user can navigate to the favorites library and see all the pets
+                                            they have saved, and add personal notes to their pet information and update
+                                            the database by a click of a button.
+                                            In future development the user will be able to delete pets from their
+                                            favorites library
+                                            application tools and technologies used: HTML, CSS, and Javascript.
+                                            This project has been deployed to GitHub Pages and Heroku.</p>
                                         <ul class="list-inline">
-                                            <li>Date: September 8 2020</li>
-                                            <li>Category: Front-end</li>
-                                            <li>GitHub: <a href="https://github.com/Geovany17/coding-Quiz">GitHub
+                                            <li>Date: October 19 2020</li>
+                                            <li>Category: FullStack</li>
+                                            <li>GitHub: <a href="https://github.com/SeyKoplik/PetFinder">GitHub
                                                     repository</a> </li>
-                                            <li>Deployed GitHub IO: <a
-                                                    href="https://geovany17.github.io/coding-Quiz/">Deployed GitHub
-                                                    IO</a> </li>
+                                            <li>Deployed On Heroku <a href="https://petfind-app.herokuapp.com/">Deployed
+                                                    Heroku
+                                                </a> </li>
                                         </ul>
                                         <button class="btn btn-primary" data-dismiss="modal" type="button">
                                             <i class="fas fa-times mr-1"></i>
