--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
                         <div class="row">
                             <div class="col-lg-8 mx-auto text-center">
                                 <p class="large">
-                                <h3 class="section-subheading ">I was born in Puerto Rico, But living in
+                                <h3 class="section-subheading ">Full-stack web developer with a Web Development
+                                    Certificate from the University of Pennsylvania.
+                                    Born in Puerto Rico, But currently living in
                                     Philadelphia,
                                     PA since
                                     2015.
@@ -176,15 +178,7 @@
                                     I
                                     have
                                     the skill
-                                    of learning things quickly. I decided to take one step further. But I went through a
-                                    lot
-                                    at
-                                    that time.
-                                    I became a father, so I had to quit college and keep working.
-                                    Then I started working in regular jobs until I started learning how to weld. After
-                                    learning
-                                    good
-                                    welding skills, I manage to get a job as a welder at Eastern Catalytic. But the IT
+                                    of learning things quickly. I decided to take one step further, the IT
                                     field
                                     has
                                     always
@@ -194,24 +188,13 @@
                                     interested in coding.
                                     Then
                                     I
-                                    said to my self you need to get to the other level. And I started taking online
-                                    courses
-                                    and
-                                    teaching
-                                    my self how to code.
-                                    When I first started learning how to code and built my first HTML file, I was
-                                    hooked.
-                                    The
-                                    internet
-                                    was
-                                    my outlet And I found a new way to learn, so I decided to join a coding "Bootcamp"
-                                    Now
-                                    I'm
-                                    learning
-                                    how to code correctly and new ways to show my passions. I consider my self a team
+                                    said to my self you need to get to the other level. So I went to the University of
+                                    Pennsylvania coding Bootcamp where I became a Full-Stack Web Developer.
+                                    I consider my self a team
                                     player,
                                     And I have
-                                    lots of experience working with different teams in different roles</h3>
+                                    lots of experience working with different teams in different types of roles and
+                                    backgrounds.</h3>
                                 </p>
                             </div>
                         </div>
