--- a/index.html
+++ b/index.html
@@ -165,36 +165,8 @@
                                 <p class="large">
                                 <h3 class="section-subheading ">Full-stack web developer with a Web Development
                                     Certificate from the University of Pennsylvania.
-                                    Born in Puerto Rico, But currently living in
-                                    Philadelphia,
-                                    PA since
-                                    2015.
-                                    When I first went to college in 2011,
-                                    It was an institute call ICPR Junior College that prepares you for the CompTIA A+
-                                    exams,
-                                    the
-                                    computer
-                                    technician certification. That's where my passion started to grow. Once I saw that,
-                                    I
-                                    have
-                                    the skill
-                                    of learning things quickly. I decided to take one step further, the IT
-                                    field
-                                    has
-                                    always
-                                    been my passion. Having a background as a computer hardware and repair technician, I
-                                    started
-                                    to get
-                                    interested in coding.
-                                    Then
-                                    I
-                                    said to my self you need to get to the other level. So I went to the University of
-                                    Pennsylvania coding Bootcamp where I became a Full-Stack Web Developer.
-                                    I consider my self a team
-                                    player,
-                                    And I have
-                                    lots of experience working with different teams in different types of roles and
-                                    backgrounds.</h3>
+                                  Having a background as a computer hardware and software repair technician, I started to get interested in coding.
+Then I said to myself you need to get to the other level. So I went to the University of Pennsylvania coding Bootcamp where I became a Full-Stack Web Developer..</h3>
                                 </p>
                             </div>
                         </div>
