--- a/index.html
+++ b/index.html
@@ -165,8 +165,11 @@
                                 <p class="large">
                                 <h3 class="section-subheading ">Full-stack web developer with a Web Development
                                     Certificate from the University of Pennsylvania.
-                                  Having a background as a computer hardware and software repair technician, I started to get interested in coding.
-Then I said to myself you need to get to the other level. So I went to the University of Pennsylvania coding Bootcamp where I became a Full-Stack Web Developer..</h3>
+                                    Having a background as a computer hardware and software repair technician, I started
+                                    to get interested in coding.
+                                    Then I said to myself you need to get to the other level. So I went to the
+                                    University of Pennsylvania coding Bootcamp where I became a Full-Stack Web
+                                    Developer..</h3>
                                 </p>
                             </div>
                         </div>
@@ -234,7 +237,8 @@ Then I said to myself you need to get to the other level. So I went to the Unive
                                 <div class="text-center">
                                     <div id="success"></div>
                                     <a id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase"
-                                        href="./assets/resume/Resume.pdf" title="Resume" download>Download</a>
+                                        href="https://drive.google.com/file/d/1WKNnBUF5kebH4KCiB-N2n_y9CwJPz-Dq/view?usp=sharing"
+                                        title="Resume" download>Download</a>
                                 </div>
                             </div>
                         </div>
