changes to work history

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <!-- Right Columm -->
           <div class="col-md-7">
             <!-- Welcome Title-->
-            <h1 class="intro-title1">Hi, i'm <span class="color1 bold">Geovany Cardoza!</span></h1>
+            <h1 class="intro-title1">Hi, I'm <span class="color1 bold">Geovany Cardoza!</span></h1>
             <!-- /Welcome Title -->
             <!-- Job - -->
             <h2 class="intro-title2">IT Technician / Full Stack Web Developer</h2>
@@ -208,7 +208,7 @@
               <div class="line row timeline-margin">
                 <div class="content-wrap">
                   <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
-                  <div class="col-md-2 timeline-progress hidden-sm hidden-xs full-height"></div>
+                  <!-- <div class="col-md-2 timeline-progress hidden-sm hidden-xs full-height"></div> -->
                   <div class="col-md-9 bg1 full-height"></div>
                 </div>
               </div>
@@ -382,29 +382,24 @@
                 <div class="col-md-8 content-wrap bg1">
                   <div class="line-content line-content-education">
                     <!-- Graduation title -->
-                    <h3 class="section-item-title-1">IT Technician</h3>
+                    <h3 class="section-item-title-1">CompTIA A+ CertMaster Student</h3>
                     <!-- /Graduation title -->
                     <!-- Graduation time -->
-                    <h4 class="graduation-time"><i class="fa fa-university"></i> ICPR Junior College Puerto Rico (1 Year
-                      Course)
-                      - <span class="graduation-date"><strong> 2011</strong></span>
+                    <h4 class="graduation-time"><i class="fa fa-university"></i> A+ Core 1 (220-1001) and Core 2
+                      (220-1002) Certification
+                      - <span class="graduation-date"><strong> Present</strong></span>
                     </h4>
                     <!-- /Graduation time -->
                     <!-- content -->
                     <div class="course-description">
-                      <p>Troubleshoot and repair hardware, software and problem solve core service and support
-                        challenges while
-
-                        applying best
-
-                        practices for documentation, change management, and scripting
-
+                      <p>Demonstrate baseline security skills for IT support professionals
+                        Configure device operating systems, including Windows, Mac, Linux, Chrome OS, Android and iOS
+                        and administer client-based as well as cloud-based (SaaS) software
+                        Troubleshoot and problem solve core service and support challenges while applying best practices
+                        for documentation, change management, and scripting
                         Support basic IT infrastructure and networking
-
                         Configure and support PC, mobile and IoT device hardware
-
                         Implement basic data backup and recovery methods and apply data storage and management best
-
                         practices. </p>
                     </div>
                     <!-- /Content -->
@@ -436,7 +431,8 @@
                     <!-- /Graduation time -->
                     <!-- content -->
                     <div class="graduation-description">
-                      <p>Lay a strong foundation in coding through learning the fundamental concepts of web development:
+                      <p>Learned a strong foundation in coding through learning the fundamental concepts of web
+                        development:
                         HTML5, CSS3, JavaScript, jQuery, command line, API consumption and much more.
                         Learn how to engineer full stack applications, write Node.js server code, MySQL, and connect
                         back end technologies with the front end.
@@ -469,23 +465,28 @@
                 <div class="col-md-8 content-wrap bg1">
                   <div class="line-content line-content-education">
                     <!-- Graduation title -->
-                    <h3 class="section-item-title-1">CompTIA A+ CertMaster Student</h3>
+                    <h3 class="section-item-title-1"> IT Technician </h3>
                     <!-- /Graduation title -->
                     <!-- Graduation time -->
-                    <h4 class="graduation-time"><i class="fa fa-university"></i> A+ Core 1 (220-1001) and Core 2
-                      (220-1002) Certification</i>
-                      - <span class="graduation-date"><strong>Present</strong> </span></h4>
+                    <h4 class="graduation-time"><i class="fa fa-university"></i> ICPR Junior College Puerto Rico (1 Year
+                      Course)</i>
+                      - <span class="graduation-date"><strong>2011</strong> </span></h4>
                     <!-- /Graduation time -->
                     <!-- content -->
                     <div class="graduation-description">
-                      <p>Demonstrate baseline security skills for IT support professionals
-                        Configure device operating systems, including Windows, Mac, Linux, Chrome OS, Android and iOS
-                        and administer client-based as well as cloud-based (SaaS) software
-                        Troubleshoot and problem solve core service and support challenges while applying best practices
-                        for documentation, change management, and scripting
+                      <p>Troubleshoot and repair hardware, software and problem solve core service and support
+                        challenges while
+
+                        applying best
+
+                        practices for documentation, change management, and scripting
+
                         Support basic IT infrastructure and networking
+
                         Configure and support PC, mobile and IoT device hardware
+
                         Implement basic data backup and recovery methods and apply data storage and management best
+
                         practices.</p>
                     </div>
                     <!-- /Content -->
@@ -542,16 +543,58 @@
                 <div class="col-md-8 content-wrap bg1">
                   <div class="line-content line-content-education">
                     <!-- Work Place -->
-                    <h3 class="section-item-title-1">Freelancer</h3>
+                    <h3 class="section-item-title-1">Freelance Full Stack Web Developer And IT Technician</h3>
                     <!-- /work place -->
                     <!-- Graduation time -->
-                    <h4 class="job"><i class="fa fa-flag"></i> Web development / IT technician- <span class="job-date">
+                    <h4 class="job"><i class="fa fa-flag"></i> Full Stack Web Developer / IT technician- <span
+                        class="job-date">
                         2020 -
                         Current</span></h4>
                     <!-- /Graduation time -->
                     <!-- content -->
                     <div class="job-description">
-                      <p>Developing awesome responsive websites and Pc and mobile devices tech.</p>
+                      <p><strong>Key Clients:</strong> MK cleaning services and Verde Organiko </p>
+                      <p><strong>Key Achievements:</strong> </p>
+                      <li>
+                        Constructed web application for MK cleaning services that let's costumers get in touch and
+                        contact the company for cleaning services.
+                      </li>
+                      <li>
+                        Constructed an Full Stack e-commerce web application for Verde Organiko that let's costumers
+                        shop for
+                        their favorite succulents plants.
+                      </li>
+                      <li>
+                        Prioritize needs, develop content criteria and deliver solutions.
+                      </li>
+                      <br>
+                      <P><strong>Website Designing & Client Relationship Management:</strong></P>
+                      <li>
+                        Handled end-to-end verbal and written communications between clients.
+                      </li>
+                      <li>
+                        Designed and wrote code for 2+ websites
+                      </li>
+                      <li>
+                        Performed market research and competitive analysis to design and implement front-end via HTML,
+                        CSS, Semantic UI , JavaScript and React.js for Verde Organiko's website.
+                      </li>
+                      <li>
+                        Performed market research and competitive analysis to design and implement front-end via HTML,
+                        CSS, Bootstrap and Wordpress for MK Cleaning Services.
+                      </li>
+                      <br>
+                      <p><strong>Website Testing & Code Evaluation:</strong></p>
+                      <li>
+                        Backing up files from the website to the local directories for recovery
+                      </li>
+                      <li>
+                        Identified problems uncovered by customer feedback and testing and troubleshooting the same
+                      </li>
+                      <li>
+                        Evaluated code to maintain proper structure & compatibility with multiple browsers and systems.
+                      </li>
+
                     </div>
                     <!-- /Content -->
                   </div>
