--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
                         class="fa fa-facebook"></i></a>
                     <a href="https://twitter.com/geovany_cardoza" class="btn btn-default"><i
                         class="fa fa-twitter"></i></a>
-                    <a href="https://www.linkedin.com/in/geovany-cardoza-14a961135/" class="btn btn-default"><i
-                        class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/geovany-cardoza-14a961135?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B1nYlJPpVRp6IUS3p5XhhdA%3D%3D"
+                      class="btn btn-default"><i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/Geovany17" class="btn btn-default"><i class="fa fa-github"></i></a>
 
                     <!-- /Content -->
