adding some info

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                       </li>
                       <li>
                         Performed market research and competitive analysis to design and implement front-end via HTML,
-                        CSS, Semantic UI , JavaScript and React.js for Verde Organiko's website.
+                        CSS, Semantic UI , JavaScript, React.js and Paypal Api for Verde Organiko's website.
                       </li>
                       <li>
                         Performed market research and competitive analysis to design and implement front-end via HTML,
