editing work history

--- a/index.html
+++ b/index.html
@@ -616,23 +616,22 @@
                 <div class="col-md-8 content-wrap bg1">
                   <div class="line-content line-content-education">
                     <!-- Work Place -->
-                    <h3 class="section-item-title-1">Eastern Catalytic.</h3>
+                    <h3 class="section-item-title-1">Eastern Catalytic</h3>
                     <!-- /work place -->
                     <!-- Graduation time -->
-                    <h4 class="job"><i class="fa fa-flag"></i> MIG welder/ machine tech - <span class="job-date"> 2019 -
+                    <h4 class="job"><i class="fa fa-flag"></i> MIG Welder/ Machine Operator - <span class="job-date">
+                        2019 -
                         2020</span></h4>
                     <!-- /Graduation time -->
                     <!-- content -->
                     <div class="job-description">
-                      <p>Weld mufflers to target and quality specifications.
-                        Correctly enter production and scrap into the stock reporting system.
-                        Ensure welding equipment is in good operating and safe working order.
-                        Meet or exceed set production targets where applicable.
-                        Ensures jobs are set up properly and all components fit before beginning to weld.
-                        Performs basic maintenance functions on machines and tooling.
-                        Keep area, machines, tools and equipment clean, organized and clear of debris.
-                        Ensure that machines safety protocols are all functional and that the job set up is in a safe
-                        condition.</p>
+                      <li>Weld mufflers to target and quality specifications.</li>
+                      <li>Correctly enter production and scrap into the stock reporting system.</li>
+                      <li>Ensure welding equipment is in good operating and safe working order.</li>
+                      <li>Meet or exceed set production targets where applicable.</li>
+                      <li>Ensures jobs are set up properly and all components fit before beginning to weld.</li>
+                      <li>Performs basic maintenance functions on machines and tooling.</li>
+
                     </div>
                     <!-- /Content -->
                   </div>
