--- a/index.html
+++ b/index.html
@@ -560,7 +560,8 @@
                         contact the company for cleaning services.
                       </li>
                       <li>
-                        Constructed an Full Stack e-commerce web application for Verde Organiko that let's costumers
+                        Constructed an "MERN Stack" Full Stack e-commerce web application for Verde Organiko that let's
+                        costumers
                         shop for
                         their favorite succulents plants.
                       </li>
