--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
                             alt="">
                         </div>
                       </a>
-                      <h4>Verde Organiko</h4>
+                      <h4>Verde Organiko "PC only"</h4>
 
                     </div>
                     <a href="https://github.com/ydeek/VerdeOrganiko"><strong> Project repo</strong></a>
