--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="row">
           <div class="header-buttons col-md-10 col-md-offset-1">
             <!-- Download Resume Button -->
-            <a href="https://drive.google.com/file/d/1WKNnBUF5kebH4KCiB-N2n_y9CwJPz-Dq/view?usp=sharing"
+            <a href="https://docs.google.com/document/d/133L9-YypBypo47iRetvV4XD4Qxj_VsP3gJbB4KvKfFk/edit?usp=sharing"
               class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download
                 my resume</span></a>
             <!-- /Download Resume Button -->
