--- a/index.html
+++ b/index.html
@@ -382,11 +382,12 @@
                 <div class="col-md-8 content-wrap bg1">
                   <div class="line-content line-content-education">
                     <!-- Graduation title -->
-                    <h3 class="section-item-title-1">CompTIA A+ CertMaster Student</h3>
+                    <h3 class="section-item-title-1">CompTIA A+ Certification</h3>
                     <!-- /Graduation title -->
                     <!-- Graduation time -->
-                    <h4 class="graduation-time"><i class="fa fa-university"></i> A+ Core 1 (220-1001) and Core 2
-                      (220-1002) Certification
+                    <h4 class="graduation-time"><i class="fa fa-university"></i> A+ Core 1 (220-1001) Passed working on
+                      Core 2
+                      (220-1002) Certification to be fully certified.
                       - <span class="graduation-date"><strong> Present</strong></span>
                     </h4>
                     <!-- /Graduation time -->
@@ -395,12 +396,9 @@
                       <p>Demonstrate baseline security skills for IT support professionals
                         Configure device operating systems, including Windows, Mac, Linux, Chrome OS, Android and iOS
                         and administer client-based as well as cloud-based (SaaS) software
-                        Troubleshoot and problem solve core service and support challenges while applying best practices
-                        for documentation, change management, and scripting
-                        Support basic IT infrastructure and networking
-                        Configure and support PC, mobile and IoT device hardware
-                        Implement basic data backup and recovery methods and apply data storage and management best
-                        practices. </p>
+                        Troubleshoot and problem solve core service and support challenges while applying best
+                        practices.
+                      </p>
                     </div>
                     <!-- /Content -->
                   </div>
