--- a/index.html
+++ b/index.html
@@ -1120,11 +1120,11 @@
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="https://verde-organiko.herokuapp.com/">
+                      <a href="https://dry-forest-93487.herokuapp.com//">
                         <div class="hover">
                           <p class="zoomi"><i class="fa fa-search"></i></p>
                           <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>Verde organico website</strong><br /> </p>
+                          <p class="portfolio-item-title"><strong>Employee Directory</strong><br /> </p>
                         </div>
                         <div class="hover-bg-wrapper">
                           <div class="hover-bg"></div>
@@ -1132,14 +1132,14 @@
                         <div class="portfolio-item-thumbnail">
                           <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
                           <img
-                            src="https://github.com/ydeek/VerdeOrganiko/blob/main/client/public/assets/images/Verde_OrganiKo.gif?raw=true"
+                            src="https://github.com/Geovany17/EmployeeDirectory/blob/main/assets/demo.gif"
                             alt="">
                         </div>
                       </a>
-                      <h4>Verde Organiko "PC only"</h4>
+                      <h4>Employee Directory"</h4>
 
                     </div>
-                    <a href="https://github.com/ydeek/VerdeOrganiko"><strong> Project repo</strong></a>
+                    <a href="https://github.com/Geovany17/EmployeeDirectory"><strong> Project repo</strong></a>
                     <!-- /Portfolio item -->
 
                     <!-- Portfolio item -->
